--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,6 +14,8 @@ jobs:
       - uses: actions/checkout@v3
       - name: Setup pnpm
         uses: pnpm/action-setup@v3
+        with:
+          version: 8
 
   build:
     runs-on: ubuntu-latest
