--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,20 +11,26 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [20.x, 21.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-
     steps:
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v3.0.0
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+      - name: Install Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
-      - run: pnpm ci
-      - run: pnpm run build --if-present
-      - run: pnpm test
+          node-version: 21
+
+      - uses: pnpm/action-setup@v3
+        name: Install pnpm
+        with:
+          version: 8
+          run_install: false
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Lint
+        run: pnpm lint
+
+      - name: test
+        run: pnpm test
